NetBSD Problem Report #40625

From www@NetBSD.org  Thu Feb 12 21:08:31 2009
Return-Path: <www@NetBSD.org>
Received: from mail.netbsd.org (mail.netbsd.org [204.152.190.11])
	by narn.NetBSD.org (Postfix) with ESMTP id 27C4763C188
	for <gnats-bugs@gnats.netbsd.org>; Thu, 12 Feb 2009 21:08:31 +0000 (UTC)
Message-Id: <20090212210830.D2DC363C183@narn.NetBSD.org>
Date: Thu, 12 Feb 2009 21:08:30 +0000 (UTC)
From: joerg@NetBSD.org
Reply-To: joerg@NetBSD.org
To: gnats-bugs@NetBSD.org
Subject: netbsd-5 crash in fork path
X-Send-Pr-Version: www-1.0

>Number:         40625
>Category:       kern
>Synopsis:       netbsd-5 crash in fork path
>Confidential:   no
>Severity:       serious
>Priority:       medium
>Responsible:    rmind
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Thu Feb 12 21:10:00 +0000 2009
>Closed-Date:    Mon Mar 02 19:33:22 +0000 2009
>Last-Modified:  Mon Mar 02 21:00:03 +0000 2009
>Originator:     Joerg Sonnenberger
>Release:        netbsd-5 as of two days ago
>Organization:
TNF
>Environment:
>Description:
panic: kmem_poison_check: 0xffff8000849eecf8: 0x00 != 0xe6
breakpoint() at netbsd:breakpoint+0x5
cpu_Debugger() at netbsd:cpu_Debugger+0x9
panic() at netbsd:panic+0x24d
kmem_poison_check() at netbsd:kmem_poison_check+0x82
kmem_free() at netbsd:kmem_free+0x44
fd_ofile_free() at netbsd:fd_ofile_free+0x1e
fd_copy() at netbsd:fd_copy+0x1ec  
fork1() at netbsd:fork1+0x7f5
sys_fork() at netbsd:sys_fork+0x32
syscall() at netbsd:syscall+0xb6

This kernel has the patch from ad for WAPBL flushing.
>How-To-Repeat:

>Fix:

>Release-Note:

>Audit-Trail:

Responsible-Changed-From-To: kern-bug-people->ad
Responsible-Changed-By: ad@NetBSD.org
Responsible-Changed-When: Thu, 12 Feb 2009 21:34:06 +0000
Responsible-Changed-Why:
take


From: Joerg Sonnenberger <joerg@britannica.bec.de>
To: gnats-bugs@NetBSD.org
Cc: 
Subject: Re: kern/40625 (netbsd-5 crash in fork path)
Date: Mon, 23 Feb 2009 14:58:26 +0100

 Running with the uvm guard patch:

 Two CPUs show:
 __kernassert() at netbsd:__kernassert+0x2d
 fd_ofile_free() at netbsd:fd_ofile_free+0x6f
 fd_copy() at netbsd:fd_copy+0x22e
 fork1() at netbsd:fork1+0x7f5
 sys_fork() at netbsd:sys_fork+0x32
 syscall() at netbsd:syscall+0xb6

 A third one:
 copyout() at netbsd:copyout+0x52
 uiomove() at netbsd:uiomove+0x63
 tmpfs_read() at netbsd:tmpfs_read+0xde
 VOP_READ() at netbsd:VOP_READ+0x66
 vn_read() at netbsd:vn_read+0x9f
 dofileread() at netbsd:dofileread+0x80
 sys_read() at netbsd:sys_read+0x72
 syscall() at netbsd:syscall+0xb6

 The failed assertion is:
 kernel diagnostic assertion "n > NDFILE" failed: file "../../../../kern/kern_descrip.c"

 Joerg

Responsible-Changed-From-To: ad->rmind
Responsible-Changed-By: rmind@NetBSD.org
Responsible-Changed-When: Mon, 02 Mar 2009 19:33:22 +0000
Responsible-Changed-Why:


State-Changed-From-To: open->closed
State-Changed-By: rmind@NetBSD.org
State-Changed-When: Mon, 02 Mar 2009 19:33:22 +0000
State-Changed-Why:
Should be fixed.


From: Mindaugas Rasiukevicius <rmind@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/40625 CVS commit: src/sys/kern
Date: Mon, 2 Mar 2009 19:28:08 +0000

 Module Name:	src
 Committed By:	rmind
 Date:		Mon Mar  2 19:28:08 UTC 2009

 Modified Files:
 	src/sys/kern: kern_descrip.c

 Log Message:
 fd_copy: fix off-by-one bug in a race condition path and assert.
 Should fix PR/40625.  OK by <ad>.


 To generate a diff of this commit:
 cvs rdiff -u -r1.185 -r1.186 src/sys/kern/kern_descrip.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

From: Soren Jacobsen <snj@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/40625 CVS commit: [netbsd-5] src/sys/kern
Date: Mon, 2 Mar 2009 20:56:14 +0000

 Module Name:	src
 Committed By:	snj
 Date:		Mon Mar  2 20:56:14 UTC 2009

 Modified Files:
 	src/sys/kern [netbsd-5]: kern_descrip.c

 Log Message:
 Pull up following revision(s) (requested by rmind in ticket #542):
 	sys/kern/kern_descrip.c: revision 1.186
 fd_copy: fix off-by-one bug in a race condition path and assert.
 Should fix PR/40625.  OK by <ad>.


 To generate a diff of this commit:
 cvs rdiff -u -r1.182.6.1 -r1.182.6.2 src/sys/kern/kern_descrip.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2007 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.