fd_copy: fix off-by-one bug in a race condition path and assert. Should fix PR/40625.  OK by <ad>.